# flask_platform_srv

./: .env.example  .gitignore  README.md  celerybeat-schedule.db  manage.py  pyproject.toml  requirements.txt  rqm.txt
conf/: config.py  constants.py  settings.local.yaml  settings.yaml
docs/: README.md
docs/api/: api-reference.md
docs/architecture/: system-design.md
docs/deployment/: installation.md
docs/developer-guide/: best-practices.md  getting-started.md
docs/user-guide/: auto-testing.md  performance-testing.md  platform-overview.md
plant_srv/: __init__.py
plant_srv/api/: __init__.py  async_task.py  auto_pytest.py  goods.py  locust_test.py  uploadfile.py  user.py
plant_srv/model/: async_task.py  auto_pytest.py  case.py  goods.py  locust_test.py  modelsbase.py  user.py
plant_srv/utils/: enum_code.py  error_handle.py  flask_util.py  json_response.py  log_moudle.py  middlewares.py  util.py
plant_srv/utils/apscheduler_util/: events.py  extensions.py  tasks.py
plant_srv/utils/celery_util/: celery_config.py  check_task.py  create_celery_app.py  make_celery.py
plant_srv/utils/celery_util/task/: openapi_task.py  task_demo.py
test/: app.py  db_opreator.py  redis_op.py  test_conf.py  test_flask.py
